# sonification-zooniverse

./: .gitignore  README.md  generate_noisy_sines.py  pyproject.toml
output/: .gitignore
